@@ -436,6 +436,10 @@ PHP 8.4 UPGRADE NOTES
   . sodium_crypto_aead_aes256gcm_*() functions are now enabled on aarch64 CPUs
     with the ARM cryptographic extensions.
 
+- SPL:
+  . Added seek() method to SplObjectStorage, now it implements
+    SeekableIterator.
+
 - Standard:
   . Added the http_get_last_response_headers() and
     http_clear_last_response_headers() that allows retrieving the same content
