@@ -192,6 +192,9 @@ PHP                                                                        NEWS
   . Add support for AEGIS-128L and AEGIS-256 (jedisct1)
   . Enable AES-GCM on aarch64 with the ARM crypto extensions (jedisct1)
 
+- SPL:
+  . Implement SeekableIterator for SplObjectStorage. (nielsdos)
+
 - Standard:
   . Implement GH-12188 (Indication for the int size in phpinfo()). (timwolla)
   . Partly fix GH-12143 (Incorrect round() result for 0.49999999999999994).
